2009-07-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update to the new `ldfp' mechanism in the Microgrid
	simulator. This break compatibility of the generated code with
	older simulator versions.
	
	* tools/bin/spp: Use `ldfp' to initialize the stack pointer when
	needed. Initialize the frame pointer to zero, since there is not
	caller context.

	* tools/lib/mtalpha-sim/callgate.s: Use `ldfp' to initialize $30
	and $15.
	
2009-07-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bugs in Fibre handling, add Fibre tests.
	
	* tools/bin/slt.in: Substitute "TEST" with the test's source file
	name in the SLT_RUN additional argument list.
	
	* programs/demo/fibre.sl,
	* programs/demo/fibre.sl.d1,
	* programs/demo/fibre.sl.d2,
	* programs/demo/fibre.sl.d3: Add Fibre example code.
	
	* programs/demo/Makefile.am (DEMOS): Update accordingly.

	* tools/bin/sag (FibreGenerator.dim): Support empty arrays
	properly.

	* tools/bin/slr.in: Insert tag -1 for Fibre index 0 if no Fibre
	data is provided. Use `mkdir -p' for temporary directories.
	
2009-07-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* configure.ac: Do not reference `cm4.in' as it does not yet
	exist.

2009-07-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Bug fixes, better support for Fibre input.
	
	* lib/include/svp/iomacros.slh: Handle case where `printf' is used
	with only a format string.

	* tools/bin/slr.in: Support reading Fibre data from standard input. 

	* tools/bin/sag (FibreGenerator),
	* tools/include/fibre.slh: Use the SAC vocabulary: "rank", "shape".

	* tools/bin/sag (SlrVarGenerator),
	* tools/bin/slr.in: Fix handling of "-l".

2009-07-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic changes.
	
	* deploy/reqs.mk: Use `svn export' instead of `svn co' as
	recommended by M. Irfanuddin.
	* deploy/Makefile-reqs.orig: Bump desired revisions.	

2009-07-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use Automake's new "parallel tests" feature. This uses
	multiple cores more effectively than slt's internal