@@ -198,6 +198,7 @@ AC_CONFIG_FILES([
 	programs/benchmarks/nas/Makefile
 	programs/benchmarks/nas/is/Makefile
 	programs/benchmarks/ll/Makefile
+	programs/benchmarks/sha/Makefile
 ])
 #AC_CONFIG_FILES([tools/bin/cm4], [chmod +x tools/bin/cm4])
 
